<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/blue2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaginaPrincipal">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="130dp"
        android:layout_height="101dp"
        android:fontFamily="@font/zillaslab"
        android:text="Crear cuenta"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="174dp"

        android:layout_height="212dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logodefinitivo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        app:srcCompat="@drawable/mediocircle" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="19dp"
        android:layout_height="18dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763"
        app:srcCompat="@drawable/mediocircle" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="377dp"
        android:layout_height="585dp"
        android:background="@drawable/borde"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50sp"
                android:fontFamily="@font/zillaslab"
                android:rotationX="4"
                android:text="Nombres"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:hint="@string/nombre" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/zillaslab"
                android:text="Apellidos"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtApellidos"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:hint="@string/nombre" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/zillaslab"
                android:text="Programa"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPrograma"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:hint="@string/progrma" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/zillaslab"
                android:text="Telefono"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:hint="@string/telefono" />


            <TextView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/zillaslab"
                android:text="Email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:hint="@string/email" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/zillaslab"
                android:text="Contraseña"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPassOne"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:hint="@string/contra1" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:backgroundTint="@color/blue2"
                android:fontFamily="@font/zillaslab"
                android:onClick="registrar"
                android:text="Reguistrar"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>